# Pyhton_RutaN

./: .coverage  LICENSE  LICENSE-docs  README.md  config.ini  config.yaml  count_reports.ini  main.py  pyproject.toml  setup.cfg
proyecto_final/BACKUP/: logica_backup.py
proyecto_final/DEVICES/: apolo11.py  apolo_11.py  backup.py  clases.py  classes.py  copia.txt  funciones.py  functions.py  generate_mission_files.py  hash_format.py  project_dummy_data.py  reports.py
proyecto_final/DEVICES/REPORTES/: pruebas.py  reportes.py
tests/: test.txt  test_backup_file.py  test_files_generation.py  test_generate_files.py  test_reports_file.py
tests/proyecto_final/DEVICES/REPORTS/reports_folder/: APLSTATS_file.txt
