[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = "Proyect Python"
authors = ["Andres Valencia <andres228cv@gmail.com>","Juan Prada <andres228cv@gmail.com>","Miguel Mulcue <andres228cv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
pandas = "^2.1.4"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
