[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = "Proyect Python"
authors = ["Andres Valencia <andres228cv@gmail.com>","Juan Felipe Prada <juanfelipepradaing@gmail.com>","Miguel Mulcue <andres228cv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
schedule = "^1.2.1"
pandas = "^2.1.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
pyyaml = "^6.0.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
